<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_usalama"
                android:textColor="#fff"
                android:textSize="40sp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/the_best_way_to_communicate_emergency"
                android:textColor="#fff"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:textAlignment="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingTop="20dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:background="@drawable/btn_style_accent_stroke"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/already_registered_click_to_login"
                    android:textAllCaps="false"
                    android:onClick="gotoLogin"
                    android:textSize="17sp"
                    android:textStyle="bold"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="20dp"
            android:layout_marginBottom="30dp"
            android:paddingBottom="30dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:drawableLeft="@drawable/email"
                android:layout_marginEnd="30dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/email"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/password"
                android:importantForAutofill="no"
                android:drawableStart="@drawable/password" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_style_accent"
                android:drawableRight="@drawable/login"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:drawableEnd="@drawable/login" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
