<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_above="@id/bottom_navigation">
    <TextView
        android:id="@+id/welcome_message"
        android:layout_width="wrap_content"
        android:text="Welcome John Doe"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/contacts_tab"
            android:layout_height="150dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:onClick="gotToContacts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/background"
                android:gravity="center"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:src="@drawable/persons"
                    android:background="@drawable/circle_stroke"
                    android:contentDescription="@string/icon1" />
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_list"
                    android:textColor="#fff"
                    android:textSize="20sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#fff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/click_to_view_your_contact_list"
                    android:textColor="#fff"
                    android:textSize="12sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:onClick="goToHistory"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/background"
                android:gravity="center"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:drawableTop="@drawable/history"
                    android:src="@drawable/history"
                    android:background="@drawable/circle_stroke"
                    android:contentDescription="@string/icon2" />
                <TextView
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textColor="#fff"
                    android:textSize="20sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#fff"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/click_to_view_emergency_alerts"
                    android:textColor="#fff"
                    android:textSize="12sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>