<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:context=".UpdateProfileActivity"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
        <include layout="@layout/toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingTop="20dp"
            android:layout_marginBottom="30dp"
            android:paddingBottom="30dp"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/update_profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/profile"
                app:civ_border_width="1dp"
                app:civ_border_color="@color/colorAccent"/>
            <EditText
                android:id="@+id/update_profile_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:drawableLeft="@drawable/username"
                android:layout_marginEnd="30dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:drawableStart="@drawable/username"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/update_profile_onames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:drawableLeft="@drawable/username"
                android:layout_marginEnd="30dp"
                android:hint="@string/other_names"
                android:inputType="text"
                android:drawableStart="@drawable/username"
                android:importantForAutofill="no" />
            <EditText
                android:id="@+id/update_profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:drawableLeft="@drawable/phone"
                android:layout_marginEnd="30dp"
                android:hint="@string/phone"
                android:inputType="phone"
                android:drawableStart="@drawable/phone"
                android:importantForAutofill="no" />


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/btn_style_accent"
                android:drawableRight="@drawable/login"
                android:onClick="updateUserProfile"
                android:text="@string/update_profile"
                android:textColor="#fff"
                android:textAllCaps="false"
                android:drawableEnd="@drawable/login" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
